multi-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: vegetable-pod

spec:
  containers:
    - name: vegetable-container
      image: vegetable-app:v1.0.0

      ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Pod

metadata:
  name: nginx-pod

spec:
  containers:
    - name: nginx-container
      image: nginx

      ports:
        - containerPort: 80

---
apiVersion: v1
kind: Pod

metadata:
  name: organic-pod

spec:
  containers:
    - name: organic-container
      image: organic-ghee:v1.0.0

      ports:
        - containerPort: 5656
