http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: organic-ghee-http-route

spec:
  parentRefs:
    - name: organic-ghee-gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /organic-ghee

      backendRefs:
        - name: organic-ghee-service
          port: 80
